package com.coreangel.particles.board;

public enum BorderCollisionDirection {
    UP, LEFT, DOWN, RIGHT
}
